--- a/src/page/AddDetailsOfExecution.css
+++ b/src/page/AddDetailsOfExecution.css
@@ -22,6 +22,7 @@
 .detail-div input {
     width: 10rem;
     text-align: center;
+    font-family: BMJUA, serif;
 }
 .submit-btn {
     cursor: pointer;
