[Fix] 월별 부서운영비 카드사용내역 조회 양식 수정

--- a/src/page/InquiryOperatingExpenses.css
+++ b/src/page/InquiryOperatingExpenses.css
@@ -33,7 +33,7 @@
     font-family: BMJUA, serif;
     text-align: center;
 }
-.inquiry-input select {
+.inquiry-input input {
     height: 2rem;
     font-size: 1.6rem;
     font-family: BMJUA, serif;
