--- a/src/page/InquiryBudgetingDetail.css
+++ b/src/page/InquiryBudgetingDetail.css
@@ -1,5 +1,5 @@
 .add-details-wrap {
-    width: 30rem;
+    width: 100%;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -35,4 +35,15 @@
     width: 7rem;
     height: 3rem;
     font-family: BMJUA, serif;
+}
+
+table {
+    width: 40%;
+    margin: 0 auto;
+}
+
+table td,
+table th {
+    width: 1%;
+    white-space: nowrap;
 }
