--- a/src/page/InquiryCareerDetail.css
+++ b/src/page/InquiryCareerDetail.css
@@ -1,4 +1,4 @@
-.inquiry-expense-wrap {
+.inquiry-career-wrap {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -7,39 +7,39 @@
     font-family: BMJUA, serif;
     text-align: center;
 }
-.inquiry-expense-title {
+.inquiry-career-title {
     text-align: center;
     font-size: 2.5rem;
     margin-top: 3rem;
 }
-.inquiry-input {
+.inquiry-id-input {
     display: flex;
     align-items: center;
 }
-.inquiry-input-wrap {
+.inquiry-id-input-wrap {
     display: flex;
     margin-top: 6rem;
     justify-content: space-evenly;
     align-items: center;
 }
-.inquiry-input label {
+.inquiry-id-input label {
     margin-right: 2rem;
     font-size: 2rem;
 }
-.inquiry-input input {
+.inquiry-id-input input {
     width: 15rem;
     height: 2rem;
     font-size: 1.6rem;
     font-family: BMJUA, serif;
     text-align: center;
 }
-.inquiry-input input {
+.inquiry-id-input input {
     height: 2rem;
     font-size: 1.6rem;
     font-family: BMJUA, serif;
     text-align: center;
 }
-.inquiry-expense-wrap button {
+.inquiry-career-wrap button {
     cursor: pointer;
     background-color: #027bff;
     color: #fff;
@@ -68,7 +68,7 @@ td {
 th {
     background-color: #8fbc8f;
 }
-.no-result {
+.career-no-result {
     font-size: 2.5rem;
     margin-top: 6rem;
 }
